--- a/core/conf/application.conf
+++ b/core/conf/application.conf
@@ -105,7 +105,7 @@ application.log.path=/log4j_t.properties
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
 #%prod.db=mysql://root:crater10lake@127.0.0.1:3306/elcuk2
-%prod.db=mysql://root:crater10lake@aggron.easya.cc:3306/elcuk2
+%prod.db=mysql://root:crater10lake@#{dbhost}:3306/#{dbname}
 db=mysql://root:crater10lake@127.0.0.1:3306/elcuk2_t
 #
 # To connect to a local PostgreSQL9 database, use:
