--- a/core/conf/dependencies.yml
+++ b/core/conf/dependencies.yml
@@ -18,7 +18,7 @@ require:
     - factoryBoy -> factory-boy 1.0:
         id: test
     # jars...
-    - elcuk -> mws 1.0:
+    - elcuk -> mws 1.1:
         exclude:
           - org.codehaus.woodstox -> *
     - org.elasticsearch -> elasticsearch 1.1.0
@@ -36,6 +36,7 @@ require:
         exclude:
          # apache ant 不需要, 我不需要构建
           - org.apache.ant -> *
+    - org.activiti -> activiti-engine 5.15.1
 
 
 
