* hibernate 4 的二级缓存库修改.  - http://stackoverflow.com/questions/11905722/java-lang-noclassdeffounderror-org-hibernate-cache-entityregion-configuring-ehc

--- a/core/conf/application.conf
+++ b/core/conf/application.conf
@@ -161,7 +161,8 @@ hibernate.cache.use_second_level_cache=true
 #\u6682\u65F6\u4E0D\u9700\u8981\u6839\u636E\u67E5\u8BE2 SQL \u8BED\u53E5\u7684\u6279\u91CF\u7F13\u5B58
 hibernate.cache.use_query_cache=true
 #hibernate 3.3 \u4EE5\u4E0A\u7684\u7248\u672C\u4F7F\u7528 region.factory_class \u8FD9\u4E2A\u53C2\u6570\u914D\u7F6E
-hibernate.cache.region.factory_class=net.sf.ehcache.hibernate.EhCacheRegionFactory
+#hibernate.cache.region.factory_class=net.sf.ehcache.hibernate.EhCacheRegionFactory
+hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 hibernate.max_fetch_depth=3
 # \u5BF9 Lazy Load \u7684\u52A0\u5F3A, \u51CF\u5C11 Lazy Load \u7684 SQL \u6570\u91CF
 hibernate.default_batch_fetch_size=24
