--- a/core/conf/dependencies.yml
+++ b/core/conf/dependencies.yml
@@ -34,6 +34,7 @@ require:
     - org.activiti -> activiti-bpmn-model 5.15.1
     - org.activiti -> activiti-modeler 5.15.1
     - org.hibernate.javax.persistence -> hibernate-jpa-2.1-api 1.0.0.Final
+    - org.hibernate -> hibernate-ehcache 4.1.0.Final
     - javax.activation  -> activation 1.1.1
     - org.apache.httpcomponents -> httpclient  4.2.3
     - net.sf.barcode4j -> barcode4j 2.1:
