* 将配置文件中的 mysql 与 redis 的 url 抽取到了环境变量中.

--- a/core/conf/application.conf
+++ b/core/conf/application.conf
@@ -105,8 +105,8 @@ application.log.path=/log4j_t.properties
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
 #%prod.db=mysql://root:crater10lake@127.0.0.1:3306/elcuk2
-%prod.db=mysql://root:crater10lake@#{dbhost}:3306/#{dbname}
-db=mysql://root:crater10lake@127.0.0.1:3306/elcuk2_t
+%prod.db=mysql://root:${DB_PASS}@${DB_HOST}:3306/${DB_NAME}
+db=mysql://root:crater10lake@${DB_HOST}:3306/elcuk2
 #db=mysql://root:crater10lake@192.168.59.103:3306/elcuk2
 
 #
@@ -298,7 +298,7 @@ yahp.FOP_TTF_FONT_PATH=${application.path}/conf/fonts/
 
 # Redis
 redis.cache=enabled
-redis.cache.url=redis://127.0.0.1:6379
+redis.cache.url=redis://${REDIS_HOST}:6379
 #redis.url=redis://127.0.0.1:3306
 
 # JitBit.
