* 解决通过 play deps 直接从七牛获取 mws-1.0.jar 库, 不再需要手动 wget.

--- a/core/conf/dependencies.yml
+++ b/core/conf/dependencies.yml
@@ -62,6 +62,11 @@ repositories:
         artifact: "https://raw.github.com/wppurking/play-redis/master/dist/[module]-[revision].zip"
         contains:
             - redis -> *
+    - qiniu:
+        type: HTTP
+        artifact: "http://77g8qz.com1.z0.glb.clouddn.com/[module]-[revision].jar"
+        contains:
+            - elcuk -> *
     - My Local Repo Mac:
         type: iBiblio
         root: "file:///${user.home}/.m2/repository/"
