--- a/core/conf/dependencies.yml
+++ b/core/conf/dependencies.yml
@@ -27,6 +27,7 @@ require:
     - org.jsoup -> jsoup 1.7.1
     - org.apache.httpcomponents -> httpclient 4.2.3
     - org.apache.httpcomponents -> httpmime 4.2.3
+    - commons-httpclient -> commons-httpclient 3.1
     - com.google.guava -> guava 18.0
     - com.alibaba -> fastjson 1.1.19
     - net.sf.opencsv -> opencsv 2.3
