* 抽取出现在各个地方的基础的 js 与 css 的加载代码. * 替换 underscore 为 lodash. (前者已经被后者合并), 并且 API 兼容.

--- a/core/conf/dependencies.yml
+++ b/core/conf/dependencies.yml
@@ -38,6 +38,7 @@ require:
         exclude:
           - javax.persistence -> *
           - org.eclipse.jdt.core.compiler -> *
+    - xml-apis -> xml-apis 1.4.01
     - org.activiti -> activiti-spring 5.15.1:
         exclude:
           - javax.persistence -> *
