--- a/core/conf/application.conf
+++ b/core/conf/application.conf
@@ -78,7 +78,7 @@ application.session.maxAge=24h
 # \u8001\u751F\u4EE3: \u89E6\u53D1 FGC, \u9700\u8981\u5728\u8FDB\u884C FGC \u7684\u6B21\u6570\u4E0A\u5C3D\u53EF\u80FD\u7684\u51CF\u5C11, FGC \u82B1\u8D39\u7684\u65F6\u95F4\u5F88\u957F, \u5E76\u4E14\u5E94\u7528\u4F1A\u88AB\u6682\u505C.
 %prod.jvm.memory=-XX:PermSize=128m -XX:MaxPermSize=128m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2
 # use 1.8 PermSize was removed
-#jvm.memory=-XX:PermSize=128m -XX:MaxPermSize=128m
+jvm.memory=-XX:PermSize=128m -XX:MaxPermSize=128m
 # Java source level => 1.6, 1.7 or 1.8 (experimental)
 java.source=1.7
 
