* 解决所依赖的 ES_HOST 与 Etracker_HOST 服务器.

--- a/core/conf/erp.conf
+++ b/core/conf/erp.conf
@@ -11,6 +11,6 @@ redirect_stderr=true
 stdout_logfile=/var/log/supervisor/erp.log
 loglevel=info
 ; put application ENV to this place.
-environment=GIN_MODE="release"
+environment=ROCKEND_HOST="http://10.129.129.23:4567"
 
 ; put this file to /etc/supervisor/conf.d/ folder
