* supervisor 的配置文件.

--- a/core/conf/erp.conf
+++ b/core/conf/erp.conf
@@ -11,6 +11,7 @@ redirect_stderr=true
 stdout_logfile=/var/log/supervisor/erp.log
 loglevel=info
 ; put application ENV to this place.
-environment=ROCKEND_HOST="http://10.129.129.23:4567"
+environment=ROCKEND_HOST="http://127.0.0.1:4567",ROOT_URL="http://127.0.0.1:9000",ES_INDEX="index_name",
+KOD_HOST="http://127.0.0.1:8080",ETRACKER_HOST="http://127.0.0.1"
 
 ; put this file to /etc/supervisor/conf.d/ folder
