--- a/core/conf/erp.conf
+++ b/core/conf/erp.conf
@@ -1,6 +1,6 @@
 [program:erp]
 directory=/root/elcuk2/core
-command=/opt/play-1.4.2/play run --%prod
+command="/opt/play-1.4.2/play run --%%prod"
 ; follow supervisord to start program
 autostart=true
 ; exit 0 auto restart
