--- a/core/conf/erp.conf
+++ b/core/conf/erp.conf
@@ -10,6 +10,8 @@ redirect_stderr=true
 ; log file to FILE_PATH
 stdout_logfile=/var/log/supervisor/erp.log
 loglevel=info
+; wait for 3s to check running
+startsecs=3
 ; put application ENV to this place.
 environment=ROCKEND_HOST="http://127.0.0.1:4567",ROOT_URL="http://127.0.0.1:9000",ES_INDEX="index_name",KOD_HOST="http://127.0.0.1:8080",ETRACKER_HOST="http://127.0.0.1",DB_HOST="rdsb2vz83t044o7d2tq2.mysql.rds.aliyuncs.com",DB_NAME="elcuk2_reapow",DB_PASS="crater10lake",REDIS_HOST="127.0.0.1"
 
