--- a/core/conf/application.conf
+++ b/core/conf/application.conf
@@ -106,7 +106,7 @@ application.log.path=/log4j_t.properties
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
 #%prod.db=mysql://root:crater10lake@127.0.0.1:3306/elcuk2
-%prod.db=mysql://root:${DB_PASS}@${DB_HOST}:3306/${DB_NAME}
+%prod.db=mysql://${DB_USER}:${DB_PASS}@${DB_HOST}:3306/${DB_NAME}
 db=mysql://root:crater10lake@${DB_HOST}:3306/elcuk2
 #db=mysql://root:crater10lake@192.168.59.103:3306/elcuk2
 
