--- a/core/conf/erp.conf
+++ b/core/conf/erp.conf
@@ -13,6 +13,6 @@ loglevel=info
 ; wait for 3s to check running
 startsecs=3
 ; put application ENV to this place.
-environment=ROCKEND_HOST="http://127.0.0.1:4567",ROOT_URL="http://127.0.0.1:9000",ES_INDEX="index_name",KOD_HOST="http://127.0.0.1:8080",ETRACKER_HOST="http://127.0.0.1",DB_HOST="rdsb2vz83t044o7d2tq2.mysql.rds.aliyuncs.com",DB_NAME="elcuk2_reapow",DB_PASS="crater10lake",REDIS_HOST="127.0.0.1"
+environment=environment=ROOT_URL="http://47.88.6.96:9000",DB_USER="reapow",DB_NAME="elcuk2_reapow",DB_PASS="crater10lake",DB_HOST="rdsb2vz83t044o7d2tq2.mysql.rds.aliyuncs.com",REDIS_HOST="127.0.0.1",ROCKEND_HOST="http://10.117.234.4:4567",ES_INDEX="elcuk2reapow",ES_HOST="http://10.117.239.66:9200",ETRACKER_ES_HOST="http://10.117.239.66:9200",KOD_HOST="http://47.88.6.96:8080",ETRACKER_HOST="http://10.117.239.66"
 
 ; put this file to /etc/supervisor/conf.d/ folder
