--- a/core/conf/log4j_t.properties
+++ b/core/conf/log4j_t.properties
@@ -10,7 +10,7 @@ log4j.appender.Rolling.layout=org.apache.log4j.PatternLayout
 log4j.appender.Rolling.layout.ConversionPattern=%d{yyy-MM-dd HH:mm:ss} [%c] %-5p ~ %m%n
 
 #HttpClient 4
-log4j.logger.org.apache.http=DEBUG
+#log4j.logger.org.apache.http=DEBUG
 log4j.logger.org.apache.http.wire=ERROR
 
 # elasticsearch
