删除 rubys/capify 下的目录

--- a/core/conf/application.conf
+++ b/core/conf/application.conf
@@ -125,9 +125,9 @@ db=mysql://root:crater10lake@${DB_HOST}:3306/elcuk2
 # db.pool.maxSize=30
 # db.pool.minSize=10
 %prod.db.pool.timeout=50000
-%prod.db.pool.maxSize=80
+%prod.db.pool.maxSize=${DB_POOL_MAX}
 # play.pool + jobs.pool + 1
-%prod.db.pool.minSize=25
+%prod.db.pool.minSize=${DB_POOL_MIN}
 # If you want to reuse an existing Datasource from your application server, use:
 # db=java:/comp/env/jdbc/myDatasource
 #
