--- a/core/conf/application.conf
+++ b/core/conf/application.conf
@@ -68,15 +68,8 @@ application.session.maxAge=24h
 # Define which port is used by JPDA when application is in debug mode (default is set to 8000)
 # jpda.port=8000
 %test.jpda.port=8001
-#
-#  S0C    S1C    S0U    S1U      EC       EU        OC         OU       PC     PU    YGC     YGCT    FGC    FGCT     GCT
-# 2880.0 2880.0  0.0   828.8  343744.0 47263.6   699072.0   317086.2  181248.0 85082.4   2444   18.981   3      1.517   20.497
-#
-# JVM \u5806\u6808\u8BBE\u7F6E
-# \u6301\u4E45\u533A: \u5185\u5B58\u8BBE\u7F6E\u5927\u5C0F\u7684\u5224\u65AD\u6807\u51C6\u4E3A: \u5728\u6392\u9664\u5176\u4ED6\u56E0\u7D20\u5F71\u54CD\u4E0B
-# \u65B0\u751F\u4EE3: \u89E6\u53D1\u7684 young gc \u6B21\u6570\u76F8\u5BF9\u4F1A\u6BD4\u8F83\u591A, \u4F1A\u662F\u4E00\u4E2A\u5468\u671F\u578B\u952F\u9F7F\u5F62\u72B6\u7684\u56FE;
-# \u8001\u751F\u4EE3: \u89E6\u53D1 FGC, \u9700\u8981\u5728\u8FDB\u884C FGC \u7684\u6B21\u6570\u4E0A\u5C3D\u53EF\u80FD\u7684\u51CF\u5C11, FGC \u82B1\u8D39\u7684\u65F6\u95F4\u5F88\u957F, \u5E76\u4E14\u5E94\u7528\u4F1A\u88AB\u6682\u505C.
-%prod.jvm.memory=-XX:PermSize=128m -XX:MaxPermSize=128m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2
+#%prod.jvm.memory=-XX:PermSize=128m -XX:MaxPermSize=128m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2
+%prod.jvm.memory=${JVM_MEM}
 # use 1.8 PermSize was removed
 jvm.memory=-XX:PermSize=128m -XX:MaxPermSize=128m
 # Java source level => 1.6, 1.7 or 1.8 (experimental)
