--- a/core/conf/erp.conf
+++ b/core/conf/erp.conf
@@ -14,7 +14,7 @@ loglevel=info
 startsecs=3
 ; put application ENV to this place.
 environment=
- JVM_MEM="-XX:PermSize=128m -XX:MaxPermSize=128m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2"
+ JVM_MEM="-XX:PermSize=128m -XX:MaxPermSize=128m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2",
  EXCHANGERATE_TOKEN="--change_me---",
  LANGUAGE="en_US.UTF-8",
  LC_ALL="en_US.UTF-8",
