调整 JVM 的变量参数

--- a/core/conf/application.conf
+++ b/core/conf/application.conf
@@ -69,9 +69,10 @@ application.session.maxAge=24h
 # jpda.port=8000
 %test.jpda.port=8001
 #%prod.jvm.memory=-XX:PermSize=128m -XX:MaxPermSize=128m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2
-%prod.jvm.memory=${JVM_MEM}
+#%prod.jvm.memory=${JVM_MEM}
 # use 1.8 PermSize was removed
-jvm.memory=-XX:PermSize=128m -XX:MaxPermSize=128m
+# 开发环境请使用 JAVA_OPT="-XX:PermSize=128m" 来代替
+#jvm.memory=-XX:PermSize=128m -XX:MaxPermSize=128m
 # Java source level => 1.6, 1.7 or 1.8 (experimental)
 java.source=1.7
 
