--- a/core/conf/erp.conf
+++ b/core/conf/erp.conf
@@ -1,6 +1,6 @@
 [program:erp]
 directory=/root/cap_elcuk2/current/core
-command=/opt/play-1.4.2/play run --%%prod
+command=JAVA_OPTS="-XX:PermSize=128m -XX:MaxPermSize=128m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2" /opt/play-1.4.2/play run --%%prod 
 ; follow supervisord to start program
 autostart=true
 ; exit 0 auto restart
@@ -14,7 +14,6 @@ loglevel=info
 startsecs=3
 ; put application ENV to this place.
 environment=
- JVM_MEM="-XX:PermSize=128m -XX:MaxPermSize=128m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2",
  EXCHANGERATE_TOKEN="--change_me---",
  LANGUAGE="en_US.UTF-8",
  LC_ALL="en_US.UTF-8",
