--- a/core/conf/erp.conf
+++ b/core/conf/erp.conf
@@ -1,6 +1,6 @@
 [program:erp]
 directory=/root/cap_elcuk2/current/core
-command=JAVA_OPTS="-XX:PermSize=128m -XX:MaxPermSize=128m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2" /opt/play-1.4.2/play run --%%prod 
+command=/opt/play-1.4.2/play run --%%prod 
 ; follow supervisord to start program
 autostart=true
 ; exit 0 auto restart
