*  升级版本到 java 8

--- a/core/conf/application.conf
+++ b/core/conf/application.conf
@@ -63,12 +63,12 @@ application.session.maxAge=24h
 # -Xmx JVM最大允许分配的堆内存，按需分配
 # -XX:PermSize JVM初始分配的非堆内存(JVM 自己使用的)
 # -XX:MaxPermSize JVM最大允许分配的非堆内存，按需分配
-%prod.jvm.memory=-XX:PermSize=256m -XX:MaxPermSize=256m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2
+%prod.jvm.memory=-XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=256m -Xms1536m -Xmx1536m -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:NewRatio=2
 # use 1.8 PermSize was removed
 # 开发环境请使用 JAVA_OPT="-XX:PermSize=128m" 来代替
-jvm.memory=-XX:PermSize=128m -XX:MaxPermSize=128m
+jvm.memory=-XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=128m
 # Java source level => 1.6, 1.7 or 1.8 (experimental)
-java.source=1.7
+java.source=1.8
 # Log level
 # ~~~~~
 # Specify log level for your application.
