* 增加 eslint 配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ cted from https://github.com/ulrich/macaron-factory/blob/master/.gitignore
 .*
 # except for .gitignore
 !.gitignore
+!.eslintrc
 *.jar
 *.class
 
