--- a/core/Gemfile
+++ b/core/Gemfile
@@ -1,3 +1,7 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
-gem "capistrano", "~> 3.5"
+gem 'capistrano', '~> 3.5'
+gem 'capistrano-bundler', '~> 1.2.0'
+gem 'capistrano-rails', '~> 1.2.0'
+gem 'capistrano-rbenv', '~> 2.0.4'
+gem 'httparty', '~> 0.14.0'
