--- a/core/config/supervisors/outxe.conf
+++ b/core/config/supervisors/outxe.conf
@@ -16,9 +16,9 @@ environment=
  CLASSPATH="$JAVA_HOME/lib",
  EXCHANGERATE_TOKEN="dbe8f8a1990c1e422474cff6",
  ROOT_URL="https://e.outxe.com/",
- DB_USER="outxe_elcuk2",
- DB_NAME="outxe_elcuk2",
- DB_PASS="crater10lake",
+ DB_USER="outxe",
+ DB_NAME="elcuk2_outxe",
+ DB_PASS="Crater10lake",
  DB_HOST="rdsb2vz83t044o7d2tq2.mysql.rds.aliyuncs.com",
  DB_POOL_MIN="5",
  DB_POOL_MAX="25",
