*  更改 easyacc supervisor 配置

--- a/core/config/supervisors/easyacc.conf
+++ b/core/config/supervisors/easyacc.conf
@@ -17,7 +17,8 @@ environment=
  JAVA_TOOL_OPTIONS="-Dfile.encoding=UTF8",
  EXCHANGERATE_TOKEN="dbe8f8a1990c1e422474cff6",
  ROOT_URL="https://e.easya.cc/",
- DB_USER="root",DB_NAME="elcuk2",
+ DB_USER="root",
+ DB_NAME="elcuk2",
  DB_PASS="crater10lake",
  DB_HOST="aggron.easya.cc",
  REDIS_HOST="127.0.0.1",
