*  增加注册 mime-type: es6

--- a/core/conf/application.conf
+++ b/core/conf/application.conf
@@ -187,7 +187,7 @@ attachments.path=data/attachments
 # \u628A\u7F13\u5B58\u4EA4\u7ED9 nginx \u6765\u5904\u7406
 %prod.http.useETag=false
 # Custom mime types
-# mimetype.xpi=application/x-xpinstall
+mimetype.es6=application/javascript
 # WS configuration
 # ~~~~~
 # Default engine is Async Http Client, uncomment to use
