--- a/core/conf/log4j.properties
+++ b/core/conf/log4j.properties
@@ -12,6 +12,8 @@ log4j.appender.file.Append=true
 log4j.appender.Rolling.layout=org.apache.log4j.PatternLayout
 log4j.appender.Rolling.layout.ConversionPattern=%d{yyy-MM-dd HH:mm:ss} [%c] %-5p ~ %m%n
 
+log4j.logger.org.apache.http=DEBUG
+log4j.logger.org.apache.http.wire=ERROR
 
 
 
