--- a/core/config/supervisors/redimp.conf
+++ b/core/config/supervisors/redimp.conf
@@ -17,7 +17,7 @@ environment=
  EXCHANGERATE_TOKEN="dbe8f8a1990c1e422474cff6",
  ROOT_URL="https://173.230.138.180:9000",
  DB_USER="root",
- DB_NAME="elcuk2redimp",
+ DB_NAME="elcuk2_redimp",
  DB_PASS="crater10lake",
  DB_HOST="aggron.easya.cc",
  DB_POOL_MIN="5",
