--- a/core/config/supervisors/mengtop.conf
+++ b/core/config/supervisors/mengtop.conf
@@ -24,6 +24,6 @@ environment=
  DB_POOL_MAX="25",
  REDIS_HOST="127.0.0.1",
  ROCKEND_HOST="http://45.32.141.39:4567",
- ES_INDEX="elcuk2brandworl",
+ ES_INDEX="elcuk2mengtop",
  ES_HOST="http://45.77.1.232:9200",
- KOD_HOST="http://45.32.141.39:8080",
+ KOD_HOST="http://kod.easyacc.com:8080"
