修改配置文件

--- a/core/config/supervisors/outxe.conf
+++ b/core/config/supervisors/outxe.conf
@@ -18,12 +18,12 @@ environment=
  ROOT_URL="https://e.outxe.com/",
  DB_USER="outxe",
  DB_NAME="elcuk2_outxe",
- DB_PASS="Crater10lake",
- DB_HOST="rdsb2vz83t044o7d2tq2.mysql.rds.aliyuncs.com",
+ DB_PASS="crater10lake",
+ DB_HOST="104.238.183.176",
  DB_POOL_MIN="5",
  DB_POOL_MAX="25",
  REDIS_HOST="127.0.0.1",
- ROCKEND_HOST="http://47.88.25.20:4567",
+ ROCKEND_HOST="http://104.207.149.136:4567",
  ES_INDEX="elcuk2outxe",
- ES_HOST="http://es.easya.cc:9200",
+ ES_HOST="http://45.77.1.232:9200",
  KOD_HOST="http://47.88.6.96:8080"
