--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,16 +12,16 @@ before_script:
 
 test:
   script:
-    - java -jar conf/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml core/app/controllers
-    - java -jar conf/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/exception
-    - java -jar conf/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/ext
-    - java -jar conf/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/helper
-    - java -jar conf/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/jobs
-    - java -jar conf/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/models
-    - java -jar conf/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/mws
-    - java -jar conf/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/notifiers
-    - java -jar conf/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/query
-    - java -jar conf/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/services
+    - java -jar lib/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml core/app/controllers
+    - java -jar lib/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/exception
+    - java -jar lib/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/ext
+    - java -jar lib/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/helper
+    - java -jar lib/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/jobs
+    - java -jar lib/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/models
+    - java -jar lib/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/mws
+    - java -jar lib/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/notifiers
+    - java -jar lib/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/query
+    - java -jar lib/checkstyle-8.1-all.jar -c conf/Erp_checkStyle.xml app/services
 
   tags:
     - efk
