--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,17 +12,17 @@ before_script:
 
 test:
   script:
-    - ls
-    - java -jar lib/checkstyle-8.1.jar -c conf/Erp_checkStyle.xml core/app/controllers
-    - java -jar lib/checkstyle-8.1.jar -c conf/Erp_checkStyle.xml app/exception
-    - java -jar lib/checkstyle-8.1.jar -c conf/Erp_checkStyle.xml app/ext
-    - java -jar lib/checkstyle-8.1.jar -c conf/Erp_checkStyle.xml app/helper
-    - java -jar lib/checkstyle-8.1.jar -c conf/Erp_checkStyle.xml app/jobs
-    - java -jar lib/checkstyle-8.1.jar -c conf/Erp_checkStyle.xml app/models
-    - java -jar lib/checkstyle-8.1.jar -c conf/Erp_checkStyle.xml app/mws
-    - java -jar lib/checkstyle-8.1.jar -c conf/Erp_checkStyle.xml app/notifiers
-    - java -jar lib/checkstyle-8.1.jar -c conf/Erp_checkStyle.xml app/query
-    - java -jar lib/checkstyle-8.1.jar -c conf/Erp_checkStyle.xml app/services
+    - ls lib
+    - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/controllers
+    - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/exception
+    - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/ext
+    - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/helper
+    - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/jobs
+    - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/models
+    - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/mws
+    - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/notifiers
+    - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/query
+    - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/services
 
   tags:
     - efk
