Update .gitlab-ci.yml cache

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,33 @@
 image: zen9073/play:1.4.2
 
-cache:
-  paths:
-    - /opt/.m2/repository/
-
 before_script:
   - export JAVA_HOME=/opt/jdk1.8.0_112
   - export CLASSPATH=.:$JAVA_HOME/lib
   - export PATH=.:$JAVA_HOME/bin:$PATH
   - export PLAY_HOME=/opt/play-1.4.2
   - export PATH=.:$PLAY_HOME:$PATH
+  
+stages:
+  - setup
+  - test
 
-  - cd core
-  - play dependencies  --sync
-
-test:
+prepare:
+  stage: setup
+  cache:
+    key: gems
+    paths:
+      - vendor/bundle
+  script:
+    - cd core
+    - play dependencies  --sync
+    
+rspec:
+  stage: test
+  cache:
+    key: gems
+    paths:
+      - vendor/bundle
+    policy: pull
   script:
     - ls lib
     - java -jar lib/checkStyle-8.1.jar -c conf/Erp_checkStyle.xml app/controllers
@@ -32,4 +45,5 @@ test:
     - efk
   only:
     - master
+
 
