--- a/core/conf/dependencies.yml
+++ b/core/conf/dependencies.yml
@@ -58,6 +58,7 @@ require:
     - org.apache.logging.log4j -> log4j-api 2.8.2
     - com.amazonaws -> aws-java-sdk-sqs 1.11.18
     - checkStyle -> checkStyle 8.1
+    - com.qiniu -> qiniu-java-sdk 7.2.+
 
 repositories:
     - factoryBoy:
