--- a/core/conf/dependencies.yml
+++ b/core/conf/dependencies.yml
@@ -21,8 +21,7 @@ require:
     - com.github.kenyonduan -> amazon-mws 1.6.4:
         transitive: false
     # 取消 es 的所有依赖, 因为只使用到 es 的搜索 Builder API
-    - org.elasticsearch -> elasticsearch 5.4.1:
-        transitive: false
+    - org.elasticsearch.client -> transport 5.4.1
     - com.fasterxml.jackson.core -> jackson-core 2.8.4
     # 跟随 es 走的 lucene 版本
     - org.apache.lucene -> lucene-core 6.5.1
